# SEE

Experiment-3/: Shalaka_Satheesh_CV-converted.docx  chi-squared-test.ipynb  out.csv
Experiments Material/: lego_table_template.csv  youBot_table_template.csv
SEE - Report/: README.md  mas_report.cls  report.aux  report.blg  report.fdb_latexmk  report.fls  report.pyg  report.synctex(busy)  report.tex
codes/: Assignment_3_1  CMakeCache.txt  EV3_Control.py  Jacobian.ipynb  Makefile  Task_2_Statistical_Analysis.ipynb  (+9 more)
codes/ROS_code_from_youbot/youBot_placing_experiment/: CMakeLists.txt  README.md  package.xml  setup.py
codes/ROS_code_from_youbot/youBot_placing_experiment/common/config/: youbot.srdf
codes/ROS_code_from_youbot/youBot_placing_experiment/common/config/marker_poses/: poses_0.json
codes/ROS_code_from_youbot/youBot_placing_experiment/common/src/youBot_placing_experiment/: placer.py
codes/ROS_code_from_youbot/youBot_placing_experiment/common/src/youBot_placing_experiment/aruco_code/: aruco_simple_create_markers.py  aruco_simple_detect_markers.py  camera_calibration.py  extract_calibration.py  marker_tracker.py  marker_tracker.py~  pose_estimation.py
codes/ROS_code_from_youbot/youBot_placing_experiment/common/src/youBot_placing_experiment/zmq_code/: publisher.py  subscriber.py
codes/ROS_code_from_youbot/youBot_placing_experiment/ros/launch/: youBot_placing.launch
codes/ROS_code_from_youbot/youBot_placing_experiment/ros/scripts/: youBot_placing_node
codes/ROS_code_from_youbot/youBot_placing_experiment/ros/src/youBot_placing_experiment_ros/: gripper_control.py  youBot_placing.py  youBot_placing.py~
codes/assignment_3_1/: Assignment_3_1  CMakeCache.txt  CMakeLists.txt  Makefile  assignment_3_1.cpp  cmake_install.cmake
(+671 files in other folders)
