<?xml version="1.0"?>
<package>
  <name>youBot_placing_experiment</name>
  <version>0.0.0</version>
  <description>The youBot_placing_experiment package</description>

   <maintainer email="djordje.vukcevic@smail.inf.h-brs.de">Djordje Vukcevic</maintainer>
   <maintainer email="aleksandar.mitrevski@h-brs.de">Aleksandar Mitrevski</maintainer>

   <license>MIT</license>
   <author email="djordje.vukcevic@smail.inf.h-brs.de">Djordje Vukcevic</author>
   <author email="aleksandar.mitrevski@h-brs.de">Aleksandar Mitrevski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
